--- a/assets/CSS.css/style.css
+++ b/assets/CSS.css/style.css
@@ -225,7 +225,9 @@ section {
     max-width: 100%;
 }
 
-/* what you do */
+/* what you do end */
+
+/*trainer section start*/
 
 .trainers {
     width: 100%;
@@ -237,11 +239,10 @@ section {
 
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
+    flex: 1;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
 }
 
 .trainer img {
@@ -267,6 +268,9 @@ section {
     font-size: 17px;
     /*  line-height: 1.3;   */
 }
+
+/*trainer section end /*
+
 /* reach out style start */
 .contact {
     background: #024e76;
