--- a/assets/CSS.css/style.css
+++ b/assets/CSS.css/style.css
@@ -42,7 +42,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 
@@ -84,6 +84,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -92,7 +93,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -171,7 +172,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -343,3 +344,18 @@ section {
     display: flex;
 }
 /* reach out style ends */
+
+/* Media query for smaller desktop screens and smaller */
+@media screen and (max-width: 980px) {
+
+}
+
+/*media query for tablets and smaller*/
+@media screen and (max-width: 768px) {
+
+}
+
+/* media query for mobile phones and smaller */
+@media screen and (max-width: 575px) {
+
+}
